Fix: noen få sonar bugs (#5565)